--- a/workall/javawork/jspProject/src/main/webapp/Day0508/Ex2_sawonxmlread.html
+++ b/workall/javawork/jspProject/src/main/webapp/Day0508/Ex2_sawonxmlread.html
@@ -45,6 +45,7 @@
             margin-right: 10px;
         }
         div.list1{
+            float: left;
             width: 400px;
             height: 150px;
             padding: 10px;
