--- a/workall/webwork/day0412/Ex5_gugudan.html
+++ b/workall/webwork/day0412/Ex5_gugudan.html
@@ -15,7 +15,8 @@
         }
         td,th{
             border: 1px solid lightgray;
-            font-size: 20px;
+            $font-size: 20px;l $
+
             font-family: 'Comic Sans MS';
             text-align: center;
         }
