--- a/workall/javawork/jspProject/src/main/webapp/Day0508/Ex3_shopjsonread.html
+++ b/workall/javawork/jspProject/src/main/webapp/Day0508/Ex3_shopjsonread.html
@@ -62,6 +62,19 @@
             margin-right: 10px;
             border-radius: 20px;
         }
+        div.mytooltip{
+            position: absolute;
+            line-height: 1.5;
+            color: black;
+            width: 200px;
+            background-color: #f90;
+            border: 2px solid white;
+            padding: 15px;
+            font-size: 14px;
+            border-radius: 30px;
+            opacity: 0.8;
+            display: none;
+        }
     </style>
     <script type="text/javascript">
         $(function () {
@@ -104,7 +117,29 @@
                     },
                 })
             });
-        });
+            //list3 의 tr 에 마우스를 올리면 툴팁에 이미지가 나타나도록 만들어보자
+            $(document).on("mousemove", "tr.view", function (e) {
+                //툴팁의 위치를 마우스포인터 위치로 변경
+                $("div.mytooltip").css({
+                    'left':e.pageX+'px',
+                    'top':e.pageY+"px"
+                });
+
+            });
+            $(document).on("mouseover", "tr.view", function (e) {
+                //tr 태그에 있는 photo 얻기
+                let photo = $(this).attr("photo");
+
+                $("div.mytooltip").fadeIn('fast');
+                $("div.mytooltip").html(
+                    `<img src="${photo}" width="200" style="border-radius: 20px">`
+                );
+            });
+            $(document).on("mouseout", "tr.view", function (e) {
+                $("div.mytooltip").fadeOut('fast');
+            });
+
+        });//end function
 
         function list1() {
             $("h2.title>b").html("<img src='../image/snoopyAvata/s3.JPG' width='50'>MyShop 사진위주로 보기");
@@ -182,7 +217,7 @@
                     $.each(data, function (idx, ele) {
                         s +=
                             `
-                            <tr>
+                            <tr class="view" photo="${ele.sphoto}">
                             <td>${idx + 1}</td>
                             <td>${ele.sname}</td>
                             <td>${ele.sprice}원</td>
@@ -205,6 +240,12 @@
     </script>
 </head>
 <body>
+<div class="mytooltip">
+    Java<br>
+    HTML<br>
+    CSS<br>
+    MySql
+</div>
 <div class="listicon">
     <i class="bi bi-grid" id="list1"></i>
     <i class="bi bi-card-list" id="list2"></i>
