--- a/workall/webwork/day0422/Ex11_formtagmunje.html
+++ b/workall/webwork/day0422/Ex11_formtagmunje.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
@@ -13,6 +14,7 @@
             font-family: 'Jua';
         }
     </style>
+
 </head>
 <body>
 <div style="margin: 30px;">
@@ -74,12 +76,14 @@
                         //     let e2=document.getElementById("email2");
                         //     if(v=='-'){
                         //         e2.value="";
-                        //         e2.focus();//물어보기
+                        //         e2.focus();
                         //     }else{
                         //         e2.value=v;
                         //     }
                         // }
-                        //이부분도 모두 제이쿼리 사용
+
+                        //이부분도 모두 제이쿼리를 이용해서 구현하시오
+
                     </script>
                 </div>
             </td>
